[gd_scene format=3 uid="uid://dv4qxawjp7s52"]

[ext_resource type="Script" uid="uid://cfmegckwm3hnw" path="res://ui/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer" unique_id=327668530]
layer = 4
script = ExtResource("1")

[node name="TopLeft" type="Control" parent="." unique_id=1510465682]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 280.0
offset_bottom = 128.0

[node name="HPBar" type="TextureRect" parent="TopLeft" unique_id=1214811176]
layout_mode = 0
offset_right = 256.0
offset_bottom = 48.0
stretch_mode = 2

[node name="HPFill" type="TextureRect" parent="TopLeft" unique_id=1767638313]
layout_mode = 0
offset_right = 256.0
offset_bottom = 48.0
stretch_mode = 2

[node name="GuardPhysical" type="TextureRect" parent="TopLeft" unique_id=1112795226]
layout_mode = 0
offset_top = 56.0
offset_right = 48.0
offset_bottom = 104.0
stretch_mode = 2

[node name="GuardMagic" type="TextureRect" parent="TopLeft" unique_id=514197904]
layout_mode = 0
offset_left = 56.0
offset_top = 56.0
offset_right = 104.0
offset_bottom = 104.0
stretch_mode = 2

[node name="ObjectivePanel" type="TextureRect" parent="." unique_id=1374214465]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 369.0
offset_right = 176.0
offset_bottom = 525.0
grow_horizontal = 2
stretch_mode = 6

[node name="ObjectiveLabel" type="Label" parent="ObjectivePanel" unique_id=1596601627]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 205.0
offset_bottom = 39.0
grow_vertical = 2
text = "当前目标：继续向右推进"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
